--- a/arch/arm64/configs/abc_defconfig
+++ b/arch/arm64/configs/abc_defconfig
@@ -5,7 +5,7 @@ CONFIG_LOCALVERSION="-ABCkernel-Oreo"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
-
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
