--- a/arch/arm64/configs/abc_defconfig
+++ b/arch/arm64/configs/abc_defconfig
@@ -6,6 +6,7 @@ CONFIG_LOCALVERSION="-ABCkernel-Oreo"
 CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
